fixed bug in mediaqueries for homepage - now no whitespace, for real.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,12 +14,12 @@
 }
 
 @media (min-width:576px) and (max-width: 767px) {
-  .row > div:nth-child(3n+4) {
+  .row > div:nth-child(2n+3) {
     clear: left;
   }
 }
 @media (min-width:768px) and (max-width: 991px) {
-  .row > div:nth-child(4n+5) {
+  .row > div:nth-child(3n+4) {
     clear: left;
   }
 }
